# noise_info_toolkit_gcc

./: !  .gitignore  AGENTS.md  CMakeLists.txt  README.md  dose_validator  dose_validator.cpp  process_tdms_cpp  process_tdms_cpp.cpp  process_tdms_python.py  validation_report.md
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: BUG_v3.2_A_WEIGHTING.md  DEVELOPMENT_PLAN_v3.1.2.md  DEVELOPMENT_PLAN_v3.1.3.md  DEVELOPMENT_PLAN_v3.2.1.md  DEVELOPMENT_PLAN_v3.2.md  development_plan.md  suggestion.md  噪声算法嵌入式验证_关键问题与解决方案.md
examples/: main.cpp
include/: audio_processor.hpp  bandpass_coefficients_48k.hpp  database.hpp  dose_calculator.hpp  dose_state.hpp  event_detector.hpp  event_processor.hpp  filter_coefficients_48k.hpp  iir_filter.hpp  math_constants.hpp  noise_metrics.hpp  noise_processor.hpp  noise_toolkit.hpp  ring_buffer.hpp  signal_utils.hpp  tdms_converter.hpp  time_history_processor.hpp  wav_reader.hpp  weighting_coefficients_matched_z_48k.hpp  weighting_coefficients_multirate.hpp
src/: audio_processor.cpp  database.cpp  dose_calculator.cpp  event_detector.cpp  event_processor.cpp  iir_filter.cpp  noise_processor.cpp  ring_buffer.cpp  signal_utils.cpp  tdms_converter.cpp  time_history_processor.cpp  wav_reader.cpp
tests/: test_class1_precision.cpp  test_dose_state.cpp  test_end_to_end.cpp  test_event_detector.cpp  test_noise_processor.cpp  test_weighting_response.cpp
tools/: generate_bandpass_coeffs.cpp  regen_weighting_coefficients.py  regen_weighting_matched_z.py
validation/: validate_dose_calculator.py
